--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <script type="text/javascript" src="lib/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="lib/bower_components/angular/angular.min.js"></script>
         <script type="text/javascript" src="lib/node_modules/angular-route/angular-route.min.js"></script>
+        <script type="text/javascript" src="lib/node_modules/google-maps/lib/Google.min.js"></script>
 
 
         <!-- APP CONFIG -->
