--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <script type="text/javascript" src="lib/bower_components/angular/angular.min.js"></script>
         <script type="text/javascript" src="lib/node_modules/angular-route/angular-route.min.js"></script>
         <script type="text/javascript" src="lib/node_modules/google-maps/lib/Google.min.js"></script>
+        <script type="text/javascript" src="lib/node_modules/angular-base64-upload/dist/angular-base64-upload.min.js"></script>
 
 
         <!-- APP CONFIG -->
