--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <script type="text/javascript" src="javascript/factories/AuthFactory.js"></script>
         <script type="text/javascript" src="javascript/factories/CampsiteFactory.js"></script>
         <script type="text/javascript" src="javascript/factories/ParkFactory.js"></script>
+        <script type="text/javascript" src="javascript/factories/CommentFactory.js"></script>
         <script type="text/javascript" src="javascript/factories/UserFactory.js"></script>
         
         <!-- CONTROLLERS -->
