--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="lib/bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="lib/node_modules/materialize-css/dist/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Rubik+Mono+One" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.css">
 </head>
 
