--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script type="text/javascript" src="lib/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="lib/node_modules/materialize-css/dist/js/materialize.min.js"></script>
     <script type="text/javascript" src="lib/bower_components/angular/angular.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-materialize/0.2.2/angular-materialize.min.js"></script>
     <script type="text/javascript" src="lib/node_modules/angular-route/angular-route.min.js"></script>
     <script type="text/javascript" src="lib/node_modules/google-maps/lib/Google.min.js"></script>
     <script type="text/javascript" src="lib/node_modules/angular-base64-upload/dist/angular-base64-upload.min.js"></script>
