--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
 
     <!-- <link rel="stylesheet" href="lib/bower_components/bootstrap/dist/css/bootstrap.min.css"> -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="lib/node_modules/materialize-css/dist/css/materialize.min.css">
+    <link rel="stylesheet" href="./lib/node_modules/materialize-css/dist/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/css?family=Rubik+Mono+One" rel="stylesheet">
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="./styles/main.css">
 </head>
 
 <body ng-app="TrekbaseApp">
@@ -21,36 +21,36 @@
     <!-- THIRD PARTY / DEPENDENCIES -->
     <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
 
-    <script type="text/javascript" src="lib/node_modules/jquery/dist/jquery.min.js"></script>
-    <!-- <script type="text/javascript" src="lib/bower_components/bootstrap/dist/js/bootstrap.min.js"></script> -->
-    <script type="text/javascript" src="lib/node_modules/materialize-css/dist/js/materialize.min.js"></script>
-    <script type="text/javascript" src="lib/node_modules/angular/angular.js"></script>
+    <script type="text/javascript" src="./lib/node_modules/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="./lib/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="./lib/node_modules/materialize-css/dist/js/materialize.min.js"></script>
+    <script type="text/javascript" src="./lib/node_modules/angular/angular.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-materialize/0.2.2/angular-materialize.min.js"></script>
-    <script type="text/javascript" src="lib/node_modules/angular-route/angular-route.min.js"></script>
-    <script type="text/javascript" src="lib/node_modules/google-maps/lib/Google.min.js"></script>
-    <script type="text/javascript" src="lib/node_modules/angular-base64-upload/dist/angular-base64-upload.min.js"></script>
+    <script type="text/javascript" src="./lib/node_modules/angular-route/angular-route.min.js"></script>
+    <script type="text/javascript" src="./lib/node_modules/google-maps/lib/Google.min.js"></script>
+    <script type="text/javascript" src="./lib/node_modules/angular-base64-upload/dist/angular-base64-upload.min.js"></script>
 
 
     <!-- APP CONFIG -->
-    <script type="text/javascript" src="javascript/app.js"></script>
-    <script type="text/javascript" src="javascript/AppConstants.js"></script>
-    <script type="text/javascript" src="javascript/AppConfig.js"></script>
+    <script type="text/javascript" src="./javascript/app.js"></script>
+    <script type="text/javascript" src="./javascript/AppConstants.js"></script>
+    <script type="text/javascript" src="./javascript/AppConfig.js"></script>
 
     <!-- FACTORIES -->
-    <script type="text/javascript" src="javascript/factories/AuthFactory.js"></script>
-    <script type="text/javascript" src="javascript/factories/CampsiteFactory.js"></script>
-    <script type="text/javascript" src="javascript/factories/ParkFactory.js"></script>
-    <script type="text/javascript" src="javascript/factories/CommentFactory.js"></script>
-    <script type="text/javascript" src="javascript/factories/UserFactory.js"></script>
+    <script type="text/javascript" src="./javascript/factories/AuthFactory.js"></script>
+    <script type="text/javascript" src="./javascript/factories/CampsiteFactory.js"></script>
+    <script type="text/javascript" src="./javascript/factories/ParkFactory.js"></script>
+    <script type="text/javascript" src="./javascript/factories/CommentFactory.js"></script>
+    <script type="text/javascript" src="./javascript/factories/UserFactory.js"></script>
 
     <!-- CONTROLLERS -->
-    <script type="text/javascript" src="javascript/controllers/AuthCtrl.js"></script>
-    <script type="text/javascript" src="javascript/controllers/CampsiteViewCtrl.js"></script>
-    <script type="text/javascript" src="javascript/controllers/HomeCtrl.js"></script>
-    <script type="text/javascript" src="javascript/controllers/NavCtrl.js"></script>
-    <script type="text/javascript" src="javascript/controllers/ParkListCtrl.js"></script>
-    <script type="text/javascript" src="javascript/controllers/ParkSearchCtrl.js"></script>
-    <script type="text/javascript" src="javascript/controllers/ParkViewCtrl.js"></script>
+    <script type="text/javascript" src="./javascript/controllers/AuthCtrl.js"></script>
+    <script type="text/javascript" src="./javascript/controllers/CampsiteViewCtrl.js"></script>
+    <script type="text/javascript" src="./javascript/controllers/HomeCtrl.js"></script>
+    <script type="text/javascript" src="./javascript/controllers/NavCtrl.js"></script>
+    <script type="text/javascript" src="./javascript/controllers/ParkListCtrl.js"></script>
+    <script type="text/javascript" src="./javascript/controllers/ParkSearchCtrl.js"></script>
+    <script type="text/javascript" src="./javascript/controllers/ParkViewCtrl.js"></script>
 
 </body>
 
